# WasmWizard

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_ANALYSIS.md  DEVELOPMENT_ENVIRONMENT_SUMMARY.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_AUDIT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LICENSE  OPEN_SOURCE_LAUNCH_PLAN.md  PRODUCTION_READY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SPRINT1_RESULTS.md  UI_UX_IMPROVEMENTS.md  VISUAL_DESIGN_MOCKUPS.md  cypress.config.js  package-lock.json  package.json  start.sh  stop.sh
.github/: DEPLOYMENT_STRATEGY.md  PULL_REQUEST_TEMPLATE.md  branch-protection-rules.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: # Code Citations.md  ci.yml  pat-automation.yml  release.yml  rollback.yml  security.yml
cypress/e2e/: comprehensive_execution_test.cy.js  debug_console.cy.js  debug_execute.cy.js  debug_file_loading.cy.js  full_flow.cy.js  health.cy.js  home.cy.js  real_upload.cy.js  result_buttons.cy.js  sample_execution_test.cy.js
cypress/fixtures/: test.wasm
examples/: README.md
examples/api-integration/: Cargo.toml  README.md  benchmark.sh  build.sh  integration_test.py  test.sh
examples/fibonacci/: Cargo.toml  README.md  benchmark.sh  build.sh  test.sh
examples/hello-world/: Cargo.toml  README.md  benchmark.sh  build.sh  test.sh
examples/text-processing/: Cargo.toml  README.md  benchmark.sh  (+2 more)
wasmwiz/: .env  .env.development  .env.example  .gitignore  ADVERTISING.md  API.md  BORROMUTERERROR_FIX_SUMMARY.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  OPERATIONS.md  PAT_AUTOMATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  REDIS_SETUP.md  SECURITY.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  askama.toml  audit.toml  deny.toml  docker-compose.dev-ports.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  mock_server.py  pids.txt  rustfmt.toml
wasmwiz/.github/: GITHUB_ACTIONS_SETUP.md  copilot-instructions.md
wasmwiz/.github/workflows/: ci.yml  rollback.yml
wasmwiz/.sqlx/: query-14aabdcb591bf8eaefe560302fbe69d2683c285fe228d497d08ca99245abdad1.json  query-25ee94c0bbf52db27de9aa7e86ca34a0cce8aac8449ab62ac8f76eff3a9d2aa1.json  query-368cce5836675bc472bd2e8d8c29e3f07b47737ddd4c40c9d89881d7a0834225.json  query-39e19afbb9879d31a6905deb0f52b1486966ac09f69cd4ed7f1d31ef51085484.json  query-44ae3b218cf3751d9d61e9737518cd96d9aa10bb8fc4f13d84dadece8ef50072.json  query-5bf8da2d109f282e241d929fff5f4c0e597b630e504db51a1b7efc0f48239fa5.json  query-5d0b43cf8a898738cfd03e685ab20d6858e3aecb6a6a574c76e15dd7f9994e10.json  query-9376f9556eec4758be153e90bd31cdc76d63eef7f99bb52fd606ea9c4502ec8f.json  query-996ec5990e72aa3c26d63b93e63f0af21c030d34d142fddce5d753b49325fac1.json  query-dacac98c19b1b58b5454df139c04fc01a0ec86c25e6d83342d57a08554785e1a.json  query-f59b5fccd9ae066aed67c23d17cb5cb549a51630c54f39bd328cf28163046eae.json  query-fa50e4e0d0973612038bf2157384a2cd8736795b918990bb4c94c6c2d21c8b0e.json
wasmwiz/DOCS/: CICD_IMPLEMENTATION_REPORT.md  ERD.md  FRONTEND_TODO.md  GIT_WORKFLOW_DIAGRAMS.md  GIT_WORKFLOW_GUIDE.md  GIT_WORKFLOW_QUICK_REFERENCE.md  IMPLEMENTATION_REPORT.md  SECURITY_STATUS.md  SPRINT1_RESULTS.md  TODO.md  TODO_ANALYSIS_SUMMARY.md  WASM_EXECUTION_DEBUG_REPORT.md  WASM_Research1  WASM_Research2
wasmwiz/k8s/: dependencies.yaml  deployment.yaml  namespaces-and-secrets.yaml  production-deployment.yaml  secrets.yaml  security-resources.yaml  staging-deployment.yaml  wasm-wizard-deployment.yaml  wasmwiz-deployment.yaml
wasmwiz/migrations/: 20250610000000_create_initial_tables.down.sql  20250610000000_create_initial_tables.sql  20250613000000_add_wasm_modules_table.down.sql  20250613000000_add_wasm_modules_table.sql  20250613000001_add_rate_limits_table.down.sql  20250613000001_add_rate_limits_table.sql  20250613000002_add_api_key_enhancements.down.sql  20250613000002_add_api_key_enhancements.sql  20250623000000_add_performance_indexes.down.sql  20250623000000_add_performance_indexes.sql
wasmwiz/monitoring/: alert_rules.yml  grafana-dashboard.json  grafana-datasources.yml  prometheus-alerts.yml  prometheus.yml
wasmwiz/scripts/: .gitignore  backup.sh  generate_secrets.sh  github-pat-manager.sh  init-db.sql  init-dev-db.sql  load_test.sh  production-validation.sh  restore.sh  start-dev.sh  validate-pat-manager.sh
wasmwiz/scripts/examples/: README.md  contributor-access.sh  deployment-example.sh
wasmwiz/src/: app.rs  config.rs  errors.rs  filters.rs  lib.rs  logging.rs  main.rs
wasmwiz/src/handlers/: admin.rs  api_keys.rs  execute.rs  execute_test.rs  health.rs  mod.rs  wasm_modules.rs  web.rs
wasmwiz/src/middleware/: admin_auth.rs  auth.rs  csrf.rs  distributed_rate_limit.rs  input_validation.rs  master_admin.rs  mod.rs  pre_auth.rs  rate_limit.rs  rate_limit_middleware.rs  redis_rate_limit.rs  security.rs  tier_access.rs
wasmwiz/src/models/: advertisement.rs  api_key.rs  api_payloads.rs  mod.rs  subscription_tier.rs  usage_log.rs  user.rs  wasm_module.rs
wasmwiz/src/monitoring/: metrics.rs  mod.rs
wasmwiz/src/services/: cleanup.rs  database.rs  mod.rs  redis.rs
wasmwiz/src/utils/: auth.rs  file_system.rs  mod.rs
wasmwiz/src/wasm/: mod.rs
wasmwiz/static/css/: modern-improvements.css  style.css
wasmwiz/static/js/: main.js  modern-ui.js
wasmwiz/static/wasm_modules/: hello_world.wasm
wasmwiz/templates/: api_keys.html  base.html  docs.html  examples.html  faq.html  index-original.html  index.html  pricing.html  privacy.html  result.html  security.html  support.html  terms.html
wasmwiz/templates/admin/: analytics.html  api_keys.html  dashboard.html  tiers.html  users.html
wasmwiz/tests/: api_key_security_tests.rs  auth_tests.rs  error_handling_tests.rs  functional_tests.rs  integration_tests.rs  rate_limit_tests.rs  security_tests.rs  unit_tests.rs  validation_tests.rs  wasm_execution_tests.rs
wasmwiz/tests/wasm_modules/: calc_add.wasm  echo.wasm  echo_output.txt  hello_world_input.txt
(+4 files in other folders)
