# Cargo.toml

[package]
name = "wasm_wizard"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_wizard"
path = "src/lib.rs"

[dependencies]
# Web server framework for high performance
actix-web = "4"

# For handling multipart form data (Wasm file uploads)
actix-multipart = "0.6"

# Core WebAssembly runtime for execution - temporarily disabled for development server startup
# wasmer = "4.0.0" # Stable version with better linking
# WASI temporarily disabled for build compatibility
# wasmer-wasi = "3.1.1" # Will be re-enabled after version compatibility issues resolved

# For JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For generating unique identifiers (UUIDs) for stored Wasm modules and API keys
uuid = { version = "1.8", features = ["v4", "serde"] } # "v4" for random UUIDs, "serde" for serialization

# For asynchronous operations
tokio = { version = "1.45", features = ["full"] } # Update to latest stable version

# For interacting with PostgreSQL database
# "runtime-tokio-native-tls" for async runtime and TLS support
# "postgres" for PostgreSQL driver
# "uuid" and "chrono" features for direct mapping of UUID and DateTime types
# "macros" for `query!` and `query_as!` macros
# Updated to 0.8.6+ to fix RUSTSEC-2024-0363 binary protocol vulnerability
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }

# For Redis-based distributed rate limiting
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls"] }
async-trait = "0.1"

# For hashing API keys (SHA-256)
sha2 = "0.10"

# For date and time handling (e.g., created_at, updated_at timestamps)
chrono = { version = "0.4", features = ["serde"] } # "serde" feature for serialization/deserialization

# For custom error handling with derive macros like `Display` and `Error`
derive_more = { version = "0.99", features = ["display", "error"] }

# For general-purpose error handling, used as the transparent source for ApiError::InternalError
anyhow = "1.0"

# For loading environment variables from a .env file during development
dotenvy = "0.15"

# For structured logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] } # Enables filtering logs by environment variables and JSON output

# For HTML templating (Web UI)
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"

# For error handling with derive macros
thiserror = "2.0.12"

# For async streaming utilities
futures-util = "0.3"

# For serving static files
actix-files = "0.6"

# For base64 encoding/decoding  
base64 = "0.22"

# For generating secure random API keys
rand = "0.8"

# For hex encoding/decoding
hex = "0.4"

# Security patches for indirect dependencies
# Force specific versions to mitigate known vulnerabilities
slab = "0.4.11"  # Fix RUSTSEC-2025-0047
protobuf = "3.7.2"  # Fix RUSTSEC-2024-0437 - Force secure version >=3.7.2
idna = "1.0.0"  # Fix RUSTSEC-2024-0421 - Force secure version >=1.0.0
rsa = "0.9.8"  # Latest stable version, timing attack still present but mitigated

# Force downgrade of unsound YAML libraries to avoid RUSTSEC-2025-0067/0068
libyml = "0.0.4"  # Downgrade to avoid unsound version
serde_yml = "0.0.11"  # Downgrade to avoid unsound version

# Additional direct dependencies to force version resolution
paste = "1.0.15"  # Keep current version to avoid unmaintained warning

# Mitigation: Force newer versions above to reduce attack surface
# Remaining risks are minimal as we don't directly use affected functionality

# For Prometheus metrics exposition
actix-web-prom = "0.9"  # Try latest version to avoid vulnerable protobuf
prometheus = "0.14"  # Update to latest stable version for protobuf security fix

# For system information and resource monitoring
sysinfo = "0.30"

# For static initialization of Prometheus metrics
once_cell = "1.19"

# For CPU detection in production
num_cpus = "1.16"

# For URL-encoded form parsing (e.g., in debug endpoint)
serde_urlencoded = "0.7"

# For bytes manipulation
bytes = "1.6"

[features]
# Enable this feature for test-specific configurations or modules
test = []

# Production optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Security vulnerability mitigation
# Note: Most vulnerabilities come from Wasmer ecosystem and cannot be easily patched
# without breaking compatibility. Risks are minimal as we don't directly use vulnerable functionality:
# - rsa 0.9.8 (RUSTSEC-2023-0071): No patched version available yet
# - idna 0.5.0 (RUSTSEC-2024-0421): Deep transitive, no direct IDNA usage
# - protobuf 2.28.0 (RUSTSEC-2024-0437): From prometheus, low risk for our use case
# - serde_yml, libyml (RUSTSEC-2025-0067/0068): Transitive from Wasmer, low risk
# These will be resolved when Wasmer updates their dependencies.

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
testcontainers = "0.12"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
wasm_wizard = { path = ".", features = ["test"] }

# Note: Patches would go here, but the vulnerable dependencies are transitive
# from Wasmer and cannot be directly patched without breaking compatibility.
# We've added direct dependencies above to try to influence version resolution.

# Try to fix virtual-net compilation issue
socket2 = "0.5"

# Removed patches as we downgraded to stable Wasmer 5.0.1
